--- a/ch2/materialized-view-cognito/index.html
+++ b/ch2/materialized-view-cognito/index.html
@@ -1,3 +1,7 @@
+<head>
+    <meta charset="utf-8">
+</head>
+    
 <div id="root"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
